[gd_scene load_steps=42 format=2]

[ext_resource path="res://scenes/battleMode/BattleModePlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/battleMode/BattleMode.gd" type="Script" id=2]
[ext_resource path="res://scenes/battleMode/BattleModeEnemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/clock.png" type="Texture" id=4]
[ext_resource path="res://audio/IslandFight.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/IslandFightReverse.wav" type="AudioStream" id=6]
[ext_resource path="res://art/battlegrid.png" type="Texture" id=7]
[ext_resource path="res://audio/Ending_Rewind_FX.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/Begin_Rewind_FX.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/TickingClockFX.wav" type="AudioStream" id=10]
[ext_resource path="res://art/bigGrid.png" type="Texture" id=11]
[ext_resource path="res://art/action menu.png" type="Texture" id=12]

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 12 )
region = Rect2( 576, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 12 )
region = Rect2( 320, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 12 )
region = Rect2( 384, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 12 )
region = Rect2( 448, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 12 )
region = Rect2( 512, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 12 )
region = Rect2( 576, 0, 64, 192 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 64, 192 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 43 ) ],
"loop": false,
"name": "hidden",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": false,
"name": "hide",
"speed": 20.0
}, {
"frames": [ SubResource( 44 ) ],
"loop": true,
"name": "showing",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "forward",
"speed": 6.0
} ]

[node name="BattleMode" type="Node2D"]
script = ExtResource( 2 )
enemyScene = ExtResource( 3 )

[node name="bigGrid" type="Sprite" parent="."]
position = Vector2( 160, 52 )
scale = Vector2( 1.716, 1.363 )
texture = ExtResource( 11 )

[node name="Grid" type="TextureRect" parent="."]
visible = false
margin_left = 126.0
margin_top = 75.0
margin_right = 196.0
margin_bottom = 147.0
texture = ExtResource( 7 )
expand = true

[node name="BattleModePlayer" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 110 )

[node name="actionMenu" type="AnimatedSprite" parent="."]
position = Vector2( 294, 87 )
scale = Vector2( 1.355, 0.725 )
frames = SubResource( 42 )
animation = "showing"

[node name="MoveButton" type="Button" parent="actionMenu"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -22.8782
margin_top = -81.3793
margin_right = 12.1218
margin_bottom = -61.3793
rect_scale = Vector2( 0.748063, 1 )
text = "MOVE"

[node name="WindWatchButton" type="Button" parent="actionMenu"]
margin_left = -22.1402
margin_top = -45.5172
margin_right = 27.8598
margin_bottom = -25.5172
rect_scale = Vector2( 0.748063, 1 )
text = "WATCH"

[node name="HealButton" type="Button" parent="actionMenu"]
margin_left = -22.1402
margin_top = -9.65517
margin_right = 27.8598
margin_bottom = 10.3448
rect_scale = Vector2( 0.748063, 1 )
text = "HEAL"

[node name="AttackButton" type="Button" parent="actionMenu"]
margin_left = -22.1402
margin_top = 24.8276
margin_right = 27.8598
margin_bottom = 44.8276
rect_scale = Vector2( 0.748063, 1 )
text = "ATTACK"

[node name="ShieldButton" type="Button" parent="actionMenu"]
margin_left = -22.8782
margin_top = 59.3103
margin_right = 37.1218
margin_bottom = 79.3103
rect_scale = Vector2( 0.748063, 1 )
text = "SHIELD"

[node name="enemySpawnLocation" type="Position2D" parent="."]
position = Vector2( 160, 25 )

[node name="AbilityCoolDownTimer" type="Timer" parent="."]
one_shot = true

[node name="VictoryButton" type="Button" parent="."]
visible = false
margin_left = 127.0
margin_top = 36.0
margin_right = 193.0
margin_bottom = 56.0
disabled = true
text = "VICTORY"

[node name="DefeatButton" type="Button" parent="."]
visible = false
margin_left = 127.0
margin_top = 37.0
margin_right = 193.0
margin_bottom = 57.0
disabled = true
text = "DEFEAT"

[node name="Menu\?" type="Label" parent="."]
margin_left = 3.0
margin_top = 1.0
margin_right = 183.0
margin_bottom = 151.0
rect_scale = Vector2( 0.5, 0.6 )
text = "Controls
R : Reverse Time
T : Stop Time
Y : Speed Up
U : Slow Down
clock visible = 
cooldown active"

[node name="Clock" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 41, 75 )
scale = Vector2( 2, 2 )
frames = SubResource( 31 )
animation = "forward"

[node name="PlayerHPBar" type="ProgressBar" parent="."]
margin_left = 126.0
margin_top = 156.0
margin_right = 196.0
margin_bottom = 170.0

[node name="normalMusicLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="reverseMusicLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
stream_paused = true

[node name="reverseStartFX" type="AudioStreamPlayer" parent="reverseMusicLoop"]
stream = ExtResource( 9 )

[node name="tickingClockFX" type="AudioStreamPlayer" parent="reverseMusicLoop"]
stream = ExtResource( 10 )
stream_paused = true

[node name="reverseEndFX" type="AudioStreamPlayer" parent="reverseMusicLoop"]
stream = ExtResource( 8 )

[connection signal="PlayerHit" from="BattleModePlayer" to="." method="_on_BattleModePlayer_PlayerHit"]
[connection signal="pressed" from="actionMenu/MoveButton" to="." method="_on_MoveButton_pressed"]
[connection signal="timeout" from="AbilityCoolDownTimer" to="." method="_on_AbilityCoolDownTimer_timeout"]
[connection signal="pressed" from="VictoryButton" to="." method="_on_VictoryButton_pressed"]
[connection signal="pressed" from="DefeatButton" to="." method="_on_DefeatButton_pressed"]
[connection signal="finished" from="normalMusicLoop" to="." method="_on_normalMusicLoop_finished"]
[connection signal="finished" from="reverseMusicLoop" to="." method="_on_reverseAudioLoop_finished"]
[connection signal="finished" from="reverseMusicLoop/tickingClockFX" to="." method="_on_tickingClockFX_finished"]
